# demis

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  references.md  requirements.txt
LoFTR/: environment.yaml  train.py
LoFTR/configs/data/: demis_trainval.py  megadepth_test_1500.py  scannet_trainval.py
LoFTR/notebooks/: demo_single_pair.ipynb  process_em_dataset_pairwise.ipynb
LoFTR/scripts/reproduce_test/: outdoor_ds.sh
LoFTR/scripts/reproduce_train/: demis.sh  indoor_ds.sh  outdoor_ds.sh
LoFTR/src/config/: default.py
LoFTR/src/datasets/: demis.py
LoFTR/src/lightning/: data.py
LoFTR/src/utils/: dataset.py  metrics.py  plotting.py
configs/: demis-fine-tuned.yaml  demis-pre-trained.yaml  demis.yaml  em424-fine-tuned.yaml  em424-pre-trained.yaml  eval-demis-fine-tuned.yaml  eval-demis-pre-trained.yaml  eval.yaml  tescan_2x2.yaml  tescan_8x3.yaml
docs/: configuration.md  datasets.md  demis-references.md  em424-references.md  training.md
imagej/: README.md  pom.xml
notebooks/: process_em_dataset.ipynb  stitch.ipynb
scripts/: evaluate_demis.py  evaluate_grid.py  generate_demis_splits.py  generate_em424_splits.py  results_converter.py  stitch.py  synthesize_demis.py  synthesize_em424.py
src/config/: config.py
src/dataset/: dataset_loader.py  demis_loader.py  demis_synthesizer.py  em424_loader.py  em424_synthesizer.py
src/eval/: demis_evaluator.py  grid_evaluator.py
src/pipeline/: demis_stitcher.py  em424_stitcher.py  grid_stitcher.py  image_cache.py  image_loader.py  tile_node.py  tile_stitcher.py
(+3 files in other folders)
