[project]
name = "demis"
version = "0.2.0"
description = "DEMIS project environment"
authors = [{ name = "Petr Šilling", email = "petr.silling@tescan.com" }]
dependencies = [
    "albumentations==0.5.1",
    "autopep8>=2.3.1",
    "av==12.3.0",
    "einops==0.3.0",
    "graphslam==0.0.8",
    "h5py==3.1.0",
    "ipython>=8.12.3",
    "joblib>=1.0.1",
    "jupyterlab>=4.1.6",
    "kornia==0.4.1",
    "lmfit==1.3.1",
    "loguru==0.5.3",
    "matplotlib>=3.7.5",
    "opencv-python==4.11.0.86",
    "pylint>=3.2.7",
    "pytorch-lightning==1.3.5",
    "ray>=1.0.1",
    "torch==1.11.0",
    "torchvision==0.12.0",
    "torchmetrics==0.6.0",
    "numpy<2.0.0",
    "tqdm>=4.66.5",
    "yacs>=0.1.8",
]
requires-python = "==3.9.*"
readme = "README.md"
license = { text = "None" }

[dependency-groups]
dev = ["ruff>=0.13.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu113"
name = "torch"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torchmetrics = { index = "pypi" }
